--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -98,6 +98,7 @@ tmdb.genre.53=Thriller
 tmdb.genre.28=Action
 tmdb.genre.12=Adventure
 tmdb.genre.878=Science Fiction
+tmdb.genre.10402=Music
 web.theme.auto=Auto
 web.theme.dark=Dark
 web.theme.light=Light
