tmdb.genre.10752 translation

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -99,6 +99,7 @@ tmdb.genre.28=Action
 tmdb.genre.12=Adventure
 tmdb.genre.878=Science Fiction
 tmdb.genre.10402=Music
+tmdb.genre.10752=War
 web.theme.auto=Auto
 web.theme.dark=Dark
 web.theme.light=Light
