--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -99,6 +99,7 @@ tmdb.genre.28=Action
 tmdb.genre.12=Aventure
 tmdb.genre.878=Science Fiction
 tmdb.genre.10402=Musique
+tmdb.genre.10752=Guerre
 web.theme.auto=Auto
 web.theme.dark=Sombre
 web.theme.light=Clair
