tmdb.genre.36 translation

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -100,6 +100,7 @@ tmdb.genre.12=Adventure
 tmdb.genre.878=Science Fiction
 tmdb.genre.10402=Music
 tmdb.genre.10752=War
+tmdb.genre.36=History
 web.theme.auto=Auto
 web.theme.dark=Dark
 web.theme.light=Light
