--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -100,6 +100,7 @@ tmdb.genre.12=Aventure
 tmdb.genre.878=Science Fiction
 tmdb.genre.10402=Musique
 tmdb.genre.10752=Guerre
+tmdb.genre.36=Histoire
 web.theme.auto=Auto
 web.theme.dark=Sombre
 web.theme.light=Clair
