tmdb.genre.10749 translation

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -101,6 +101,7 @@ tmdb.genre.878=Science Fiction
 tmdb.genre.10402=Music
 tmdb.genre.10752=War
 tmdb.genre.36=History
+tmdb.genre.10749=Romance
 web.theme.auto=Auto
 web.theme.dark=Dark
 web.theme.light=Light
