--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -101,6 +101,7 @@ tmdb.genre.878=Science Fiction
 tmdb.genre.10402=Musique
 tmdb.genre.10752=Guerre
 tmdb.genre.36=Histoire
+tmdb.genre.10749=Romance
 web.theme.auto=Auto
 web.theme.dark=Sombre
 web.theme.light=Clair
