--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -110,3 +110,5 @@ mail.footer.app-link=View and manage on website
 discord.media.available.body.actions=Actions
 discord.media.available.body.actions.requirement.add=Add to my watchlist
 mail.media.available.body.actions.requirement.add=Add to my watchlist
+discord.media.available.body.external.links=Liens externes
+mail.media.available.body.external.links=Liens externes
