--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -110,5 +110,5 @@ mail.footer.app-link=Voir et gérer sur le site
 discord.media.available.body.actions=Actions
 discord.media.available.body.actions.requirement.add=Ajouter à ma liste de lecture
 mail.media.available.body.actions.requirement.add=Ajouter à ma liste de lecture
-discord.media.available.body.external.links=External links
-mail.media.available.body.external.links=External links
+discord.media.available.body.external.links=Liens externes
+mail.media.available.body.external.links=Liens externes
