Fix requirements table order

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -62,6 +62,7 @@ web.media-list.table.action.complete=Complete
 web.media-list.table.action=Actions
 web.media-list.table.availability=Availability
 web.media-list.table.episodes=Episodes
+web.media-list.table.downloaded=Downloaded
 web.media-list.table.id=ID
 web.media-list.table.links=Links
 web.media-list.table.name=Name
