--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -62,6 +62,7 @@ web.media-list.table.action.complete=Compléter
 web.media-list.table.action=Actions
 web.media-list.table.availability=Disponibilité
 web.media-list.table.episodes=Episodes
+web.media-list.table.downloaded=Téléchargé
 web.media-list.table.id=ID
 web.media-list.table.links=Liens
 web.media-list.table.name=Nom
