--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -41,6 +41,9 @@ media.availability.downloaded=Available
 media.availability.downloading=Downloading
 media.availability.manual=Manual
 media.availability.waiting=Pending
+media.availability.pending-deletion=Soon deleted
+media.availability.deleted=Deleted
+media.availability.keep=Keep
 media.type.movie=Movie
 media.type.tv=Series
 web.admin.requirement.add.group=User group
