--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -41,6 +41,9 @@ media.availability.downloaded=Disponible
 media.availability.downloading=En téléchargement
 media.availability.manual=Manuel
 media.availability.waiting=En attente
+media.availability.pending-deletion=Bientôt supprimé
+media.availability.deleted=Supprimé
+media.availability.keep=A garder
 media.type.movie=Film
 media.type.tv=Série
 web.admin.requirement.add.group=Groupe utilisateur
