List unmapped elements

--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -116,3 +116,4 @@ discord.media.available.body.actions.requirement.add=Ajouter à ma liste de lect
 mail.media.available.body.actions.requirement.add=Ajouter à ma liste de lecture
 discord.media.available.body.external.links=Liens externes
 mail.media.available.body.external.links=Liens externes
+web.navbar.admin.library.unmapped=Non-liés
