--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -116,3 +116,4 @@ discord.media.available.body.actions.requirement.add=Add to my watchlist
 mail.media.available.body.actions.requirement.add=Add to my watchlist
 discord.media.available.body.external.links=External links
 mail.media.available.body.external.links=External links
+web.navbar.admin.library.unmapped=Unmapped
