Restrict adding requirement on deleted media

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -53,6 +53,8 @@ web.admin.requirement.add.season=Season
 web.admin.requirement.add.submit=Add
 web.admin.requirement.add.type=Type
 web.api.success=Success
+web.api.error=Error
+web.api.back=Back to main page
 web.auth.error.back=Back
 web.auth.header=Login with your Plex.tv account
 web.auth.logged-out=You have been logged out.
@@ -117,3 +119,4 @@ mail.media.available.body.actions.requirement.add=Add to my watchlist
 discord.media.available.body.external.links=External links
 mail.media.available.body.external.links=External links
 web.navbar.admin.library.unmapped=Unmapped
+requirement.add.unavailable=Media is not available anymore, please request it again on Overseerr
