--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -53,6 +53,8 @@ web.admin.requirement.add.season=Saison
 web.admin.requirement.add.submit=Ajouter
 web.admin.requirement.add.type=Type
 web.api.success=Réussi
+web.api.error=Erreur
+web.api.back=Retour à la page principale
 web.auth.error.back=Retour
 web.auth.header=Connectez-vous avec votre compte Plex.tv
 web.auth.logged-out=Vous avez été déconnecté.
@@ -117,3 +119,4 @@ mail.media.available.body.actions.requirement.add=Ajouter à ma liste de lecture
 discord.media.available.body.external.links=Liens externes
 mail.media.available.body.external.links=Liens externes
 web.navbar.admin.library.unmapped=Non-liés
+requirement.add.unavailable=Le média n'est plus disponible, merci de le demander à nouveau sur Overseerr
