--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -63,6 +63,7 @@ web.auth.login-success=Connexion réussie
 web.auth.login=Connexion
 web.auth.success.header=Vous êtes connecté, vous allez bientôt être redirigé
 web.media-list.table.action.abandon=Abandonner
+web.media-list.table.action.keep=Garder
 web.media-list.table.action.complete=Compléter
 web.media-list.table.action=Actions
 web.media-list.table.availability=Disponibilité
@@ -75,9 +76,10 @@ web.media-list.table.season=Saison
 web.media-list.table.type=Type
 web.media-list.table.user=Utilisateur
 web.media-list.table.watched=Regardé
-web.navbar.admin.media.list-soon-deleted=Bientôt supprimé
+web.navbar.admin.media.list-soon-deleted=Médias bientôt supprimés
+web.navbar.admin.media.list=Tous les médias
 web.navbar.admin.requirement.add=Ajout exigence
-web.navbar.admin.requirement.list=Liste des exigences
+web.navbar.admin.requirement.list=Toutes les exigences
 web.navbar.logout=Déconnexion
 web.navbar.media-list=Liste de lecture
 mail.watchlist.body.header.downloading=En téléchargement
@@ -118,5 +120,5 @@ discord.media.available.body.actions.requirement.add=Ajouter à ma liste de lect
 mail.media.available.body.actions.requirement.add=Ajouter à ma liste de lecture
 discord.media.available.body.external.links=Liens externes
 mail.media.available.body.external.links=Liens externes
-web.navbar.admin.library.unmapped=Non-liés
+web.navbar.admin.library.unmapped=Médias non-liés
 requirement.add.unavailable=Le média n'est plus disponible, merci de le demander à nouveau sur Overseerr
