--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -63,6 +63,7 @@ web.auth.login-success=Login success
 web.auth.login=Login
 web.auth.success.header=You are now logged in, you'll be redirected to the homepage soon
 web.media-list.table.action.abandon=Abandon
+web.media-list.table.action.keep=Keep
 web.media-list.table.action.complete=Complete
 web.media-list.table.action=Actions
 web.media-list.table.availability=Availability
@@ -75,11 +76,12 @@ web.media-list.table.season=Season
 web.media-list.table.type=Type
 web.media-list.table.user=User
 web.media-list.table.watched=Watched
-web.navbar.admin.media.list-soon-deleted=Soon deleted
+web.navbar.admin.media.list-soon-deleted=Soon deleted medias
+web.navbar.admin.media.list=All medias
 web.navbar.admin.requirement.add=Add requirement
-web.navbar.admin.requirement.list=List requirements
+web.navbar.admin.requirement.list=All requirements
 web.navbar.logout=Logout
-web.navbar.media-list=Media list
+web.navbar.media-list=Watchlist
 mail.watchlist.body.header.downloading=Downloading
 mail.watchlist.body.header.pending=Pending
 tvdb.genre.adventure=Adventure
@@ -118,5 +120,5 @@ discord.media.available.body.actions.requirement.add=Add to my watchlist
 mail.media.available.body.actions.requirement.add=Add to my watchlist
 discord.media.available.body.external.links=External links
 mail.media.available.body.external.links=External links
-web.navbar.admin.library.unmapped=Unmapped
+web.navbar.admin.library.unmapped=Unmapped medias
 requirement.add.unavailable=Media is not available anymore, please request it again on Overseerr
