--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -64,6 +64,7 @@ web.auth.login=Login
 web.auth.success.header=You are now logged in, you'll be redirected to the homepage soon
 web.media-list.table.action.abandon=Abandon
 web.media-list.table.action.keep=Keep
+web.media-list.table.action.unkeep=Unkeep
 web.media-list.table.action.complete=Complete
 web.media-list.table.action=Actions
 web.media-list.table.availability=Availability
