--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -64,6 +64,7 @@ web.auth.login=Connexion
 web.auth.success.header=Vous êtes connecté, vous allez bientôt être redirigé
 web.media-list.table.action.abandon=Abandonner
 web.media-list.table.action.keep=Garder
+web.media-list.table.action.unkeep=Dé-garder
 web.media-list.table.action.complete=Compléter
 web.media-list.table.action=Actions
 web.media-list.table.availability=Disponibilité
