--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -111,6 +111,7 @@ tmdb.genre.10402=Music
 tmdb.genre.10752=War
 tmdb.genre.36=History
 tmdb.genre.10749=Romance
+tmdb.genre.10762=Kids
 web.theme.auto=Auto
 web.theme.dark=Dark
 web.theme.light=Light
