--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -111,6 +111,7 @@ tmdb.genre.10402=Musique
 tmdb.genre.10752=Guerre
 tmdb.genre.36=Histoire
 tmdb.genre.10749=Romance
+tmdb.genre.10762=Enfants
 web.theme.auto=Auto
 web.theme.dark=Sombre
 web.theme.light=Clair
