--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -43,6 +43,7 @@ media.availability.manual=Manual
 media.availability.waiting=Pending
 media.availability.pending-deletion=Soon deleted
 media.availability.deleted=Deleted
+media.availability.manually-deleted=Manually deleted
 media.availability.keep=Keep
 media.type.movie=Movie
 media.type.tv=Series
@@ -64,6 +65,7 @@ web.auth.login=Login
 web.auth.success.header=You are now logged in, you'll be redirected to the homepage soon
 web.media-list.table.action.abandon=Abandon
 web.media-list.table.action.keep=Keep
+web.media-list.table.action.deleted=Manually delete
 web.media-list.table.action.unkeep=Unkeep
 web.media-list.table.action.complete=Complete
 web.media-list.table.action=Actions
