--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -43,6 +43,7 @@ media.availability.manual=Manuel
 media.availability.waiting=En attente
 media.availability.pending-deletion=Bientôt supprimé
 media.availability.deleted=Supprimé
+media.availability.manually-deleted=Supprimé manuellement
 media.availability.keep=A garder
 media.type.movie=Film
 media.type.tv=Série
@@ -64,6 +65,7 @@ web.auth.login=Connexion
 web.auth.success.header=Vous êtes connecté, vous allez bientôt être redirigé
 web.media-list.table.action.abandon=Abandonner
 web.media-list.table.action.keep=Garder
+web.media-list.table.action.deleted=Supprimer manuellement
 web.media-list.table.action.unkeep=Dé-garder
 web.media-list.table.action.complete=Compléter
 web.media-list.table.action=Actions
