Add media list for everyone

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -126,3 +126,4 @@ discord.media.available.body.external.links=External links
 mail.media.available.body.external.links=External links
 web.navbar.admin.library.unmapped=Unmapped medias
 requirement.add.unavailable=Media is not available anymore, please request it again on Overseerr
+web.navbar.media-add=Other media
