--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -126,3 +126,4 @@ discord.media.available.body.external.links=Liens externes
 mail.media.available.body.external.links=Liens externes
 web.navbar.admin.library.unmapped=Médias non-liés
 requirement.add.unavailable=Le média n'est plus disponible, merci de le demander à nouveau sur Overseerr
+web.navbar.media-add=Autres médias
