Update notification headers

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -85,8 +85,8 @@ web.navbar.admin.requirement.add=Add requirement
 web.navbar.admin.requirement.list=All requirements
 web.navbar.logout=Logout
 web.navbar.media-list=Watchlist
-mail.watchlist.body.header.downloading=Downloading
-mail.watchlist.body.header.pending=Pending
+mail.watchlist.body.header.downloading=Media downloading:
+mail.watchlist.body.header.pending=Media waiting to be downloaded:
 tvdb.genre.adventure=Adventure
 tvdb.genre.animation=Animation
 tvdb.genre.comedy=Comedy
