--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -85,8 +85,8 @@ web.navbar.admin.requirement.add=Ajout exigence
 web.navbar.admin.requirement.list=Toutes les exigences
 web.navbar.logout=Déconnexion
 web.navbar.media-list=Liste de lecture
-mail.watchlist.body.header.downloading=En téléchargement
-mail.watchlist.body.header.pending=En attente
+mail.watchlist.body.header.downloading=Médias en téléchargement :
+mail.watchlist.body.header.pending=Médias en attente de téléchargement :
 tvdb.genre.adventure=Aventure
 tvdb.genre.animation=Animation
 tvdb.genre.comedy=Comédie
