Add refresh button on media

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -67,6 +67,7 @@ web.media-list.table.action.abandon=Abandon
 web.media-list.table.action.keep=Keep
 web.media-list.table.action.deleted=Manually delete
 web.media-list.table.action.unkeep=Unkeep
+web.media-list.table.action.refresh=Refresh
 web.media-list.table.action.complete=Complete
 web.media-list.table.action=Actions
 web.media-list.table.availability=Availability
