--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -67,6 +67,7 @@ web.media-list.table.action.abandon=Abandonner
 web.media-list.table.action.keep=Garder
 web.media-list.table.action.deleted=Supprimer manuellement
 web.media-list.table.action.unkeep=Dé-garder
+web.media-list.table.action.refresh=Rafraichir
 web.media-list.table.action.complete=Compléter
 web.media-list.table.action=Actions
 web.media-list.table.availability=Disponibilité
