Remove LangService and add translations instead

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -128,3 +128,12 @@ mail.media.available.body.external.links=External links
 web.navbar.admin.library.unmapped=Unmapped medias
 requirement.add.unavailable=Media is not available anymore, please request it again on Overseerr
 web.navbar.media-add=Other media
+locale.ara=Arabic
+locale.deu=German
+locale.eng=English
+locale.fra=French
+locale.ita=Italian
+locale.jpn=Japanese
+locale.por=Portuguese
+locale.rus=Russian
+locale.spa=Spanish
