--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -128,3 +128,12 @@ mail.media.available.body.external.links=Liens externes
 web.navbar.admin.library.unmapped=Médias non-liés
 requirement.add.unavailable=Le média n'est plus disponible, merci de le demander à nouveau sur Overseerr
 web.navbar.media-add=Autres médias
+locale.ara=Arabe
+locale.deu=Allemand
+locale.eng=Anglais
+locale.fra=Français
+locale.ita=Italien
+locale.jpn=Japonais
+locale.por=Portugais
+locale.rus=Russe
+locale.spa=Espagnol
