Add type EPISODE

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -36,6 +36,7 @@ mail.watchlist.body.header.available=Media fully downloaded and waiting to be wa
 mail.watchlist.body.media.movie=Movie: {0}
 mail.watchlist.body.media.series.episodes=Waiting for episodes {0}
 mail.watchlist.body.media.series=Series: {0} - Season {1}
+mail.watchlist.body.media.episode=Episode: {0} - Season {1}
 mail.watchlist.subject=Plex: Your watchlist
 media.availability.downloaded=Available
 media.availability.downloading=Downloading
@@ -47,6 +48,7 @@ media.availability.manually-deleted=Manually deleted
 media.availability.keep=Keep
 media.type.movie=Movie
 media.type.tv=Series
+media.type.episode=Episode
 web.admin.requirement.add.group=User group
 web.admin.requirement.add.header=Add requirement
 web.admin.requirement.add.overseerr=Overseerr ID
