--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -36,6 +36,7 @@ mail.watchlist.body.header.available=Médias disponibles en attente de visionnag
 mail.watchlist.body.media.movie=Film : {0}
 mail.watchlist.body.media.series.episodes=En attente des épisodes {0}
 mail.watchlist.body.media.series=Série : {0} - Saison {1}
+mail.watchlist.body.media.episode=Épisode : {0} - Saison {1}
 mail.watchlist.subject=Plex : Votre liste de lecture
 media.availability.downloaded=Disponible
 media.availability.downloading=En téléchargement
@@ -47,6 +48,7 @@ media.availability.manually-deleted=Supprimé manuellement
 media.availability.keep=A garder
 media.type.movie=Film
 media.type.tv=Série
+media.type.episode=Épisode
 web.admin.requirement.add.group=Groupe utilisateur
 web.admin.requirement.add.header=Ajout exigence
 web.admin.requirement.add.overseerr=ID Overseerr
