Display episode in list and refresh name from overseerr

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -79,6 +79,7 @@ web.media-list.table.id=ID
 web.media-list.table.links=Links
 web.media-list.table.name=Name
 web.media-list.table.season=Season
+web.media-list.table.episode=Episode
 web.media-list.table.type=Type
 web.media-list.table.user=User
 web.media-list.table.watched=Watched
