--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -79,6 +79,7 @@ web.media-list.table.id=ID
 web.media-list.table.links=Liens
 web.media-list.table.name=Nom
 web.media-list.table.season=Saison
+web.media-list.table.episode=Épisode
 web.media-list.table.type=Type
 web.media-list.table.user=Utilisateur
 web.media-list.table.watched=Regardé
