Add episode from UI + Change table index

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -53,6 +53,7 @@ web.admin.requirement.add.group=User group
 web.admin.requirement.add.header=Add requirement
 web.admin.requirement.add.overseerr=Overseerr ID
 web.admin.requirement.add.season=Season
+web.admin.requirement.add.episode=Episode
 web.admin.requirement.add.submit=Add
 web.admin.requirement.add.type=Type
 web.api.success=Success
