--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -53,6 +53,7 @@ web.admin.requirement.add.group=Groupe utilisateur
 web.admin.requirement.add.header=Ajout exigence
 web.admin.requirement.add.overseerr=ID Overseerr
 web.admin.requirement.add.season=Saison
+web.admin.requirement.add.episode=Episode
 web.admin.requirement.add.submit=Ajouter
 web.admin.requirement.add.type=Type
 web.api.success=Réussi
