--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -141,3 +141,10 @@ locale.jpn=Japanese
 locale.por=Portuguese
 locale.rus=Russian
 locale.spa=Spanish
+locale.hye=Armenian
+locale.ind=Indonesian
+locale.msa=Malay
+locale.tha=Thai
+locale.vie=Vietnamese
+locale.kor=Korean
+locale.cho=Chinese
