--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -141,3 +141,10 @@ locale.jpn=Japonais
 locale.por=Portugais
 locale.rus=Russe
 locale.spa=Espagnol
+locale.hye=Arménien
+locale.ind=Indonésien
+locale.msa=Malais
+locale.tha=Thaï
+locale.vie=Vietnamien
+locale.koe=Coréen
+locale.cho=Chinois
