--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -132,6 +132,7 @@ mail.media.available.body.external.links=External links
 web.navbar.admin.library.unmapped=Unmapped medias
 requirement.add.unavailable=Media is not available anymore, please request it again on Overseerr
 web.navbar.media-add=Other media
+locale.unknown=Unknown
 locale.ara=Arabic
 locale.deu=German
 locale.eng=English
