--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -132,6 +132,7 @@ mail.media.available.body.external.links=ลิงค์ภายนอก
 web.navbar.admin.library.unmapped=สื่อที่ยังไม่ได้แมป
 requirement.add.unavailable=สื่อไม่พร้อมใช้งานอีกต่อไป กรุณาขอใหม่ที่ Overseerr
 web.navbar.media-add=สื่ออื่นๆ
+locale.unknown=ไม่ทราบ
 locale.ara=อาหรับ
 locale.deu=เยอรมัน
 locale.eng=อังกฤษ
