When media added, notify resolution and bitrate

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -7,6 +7,8 @@ discord.media.available.body.genres=Genres
 discord.media.available.body.length=Length
 discord.media.available.body.release-date=Release date
 discord.media.available.body.subtitles=Subtitles
+discord.media.available.body.resolutions=Resolutions
+discord.media.available.body.bitrates=Bitrates
 discord.media.available.body.summary=Summary
 discord.media.available.subject=Plex: Media from your watchlist available
 discord.media.deleted.subject=Plex: Media from your watchlist deleted
@@ -27,6 +29,8 @@ mail.media.available.body.genres=Genres
 mail.media.available.body.length=Length
 mail.media.available.body.release-date=Release date
 mail.media.available.body.subtitles=Subtitles
+mail.media.available.body.resolutions=Resolutions
+mail.media.available.body.bitrates=Bitrates
 mail.media.available.subject=Plex: Media from your watchlist available
 mail.media.deleted.subject=Plex: Media from your watchlist deleted
 mail.requirement.added.subject=Plex: New media added to watchlist
