--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -7,6 +7,8 @@ discord.media.available.body.genres=Genres
 discord.media.available.body.length=Durée
 discord.media.available.body.release-date=Date de sortie
 discord.media.available.body.subtitles=Sous-titres
+discord.media.available.body.resolutions=Résolutions
+discord.media.available.body.bitrates=Débits
 discord.media.available.body.summary=Résumé
 discord.media.available.subject=Plex : Média de la liste de lecture disponible
 discord.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
@@ -27,6 +29,8 @@ mail.media.available.body.genres=Genres
 mail.media.available.body.length=Durée
 mail.media.available.body.release-date=Date de sortie
 mail.media.available.body.subtitles=Sous-titres
+mail.media.available.body.resolutions=Résolutions
+mail.media.available.body.bitrates=Débits
 mail.media.available.subject=Plex : Média de la liste de lecture disponible
 mail.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
 mail.requirement.added.subject=Plex : Nouveau média ajouté à la liste de lecture
