--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -7,6 +7,8 @@ discord.media.available.body.genres=ประเภท
 discord.media.available.body.length=ความยาว
 discord.media.available.body.release-date=วันออก
 discord.media.available.body.subtitles=คำบรรยาย
+discord.media.available.body.resolutions=ความละเอียด
+discord.media.available.body.bitrates=อัตราบิต
 discord.media.available.body.summary=สรุป
 discord.media.available.subject=Plex: สื่อจากรายการที่คุณดูพร้อมใช้งาน
 discord.media.deleted.subject=Plex: สื่อจากรายการที่คุณดูถูกลบแล้ว
@@ -27,6 +29,8 @@ mail.media.available.body.genres=ประเภท
 mail.media.available.body.length=ความยาว
 mail.media.available.body.release-date=วันออก
 mail.media.available.body.subtitles=คำบรรยาย
+mail.media.available.body.resolutions=ความละเอียด
+mail.media.available.body.bitrates=อัตราบิต
 mail.media.available.subject=Plex: สื่อจากรายการที่คุณดูพร้อมใช้งาน
 mail.media.deleted.subject=Plex: สื่อจากรายการที่คุณดูถูกลบแล้ว
 mail.requirement.added.subject=Plex: เพิ่มสื่อใหม่ในรายการที่ต้องการ
