Setting manual media

--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -75,6 +75,8 @@ web.media-list.table.action.keep=Garder
 web.media-list.table.action.deleted=Supprimer manuellement
 web.media-list.table.action.unkeep=Dé-garder
 web.media-list.table.action.refresh=Rafraichir
+web.media-list.table.action.manual=Manuel
+web.media-list.table.action.unmanual=Automatique
 web.media-list.table.action.complete=Compléter
 web.media-list.table.action=Actions
 web.media-list.table.availability=Disponibilité
@@ -151,5 +153,5 @@ locale.ind=Indonésien
 locale.msa=Malais
 locale.tha=Thaï
 locale.vie=Vietnamien
-locale.koe=Coréen
+locale.kor=Coréen
 locale.cho=Chinois
