--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -75,6 +75,8 @@ web.media-list.table.action.keep=เก็บไว้
 web.media-list.table.action.deleted=ลบด้วยตนเอง
 web.media-list.table.action.unkeep=ยกเลิกการเก็บไว้
 web.media-list.table.action.refresh=รีเฟรช
+web.media-list.table.action.manual=คู่มือ
+web.media-list.table.action.unmanual=อัตโนมัติ
 web.media-list.table.action.complete=เสร็จสมบูรณ์
 web.media-list.table.action=การกระทำ
 web.media-list.table.availability=ความพร้อมใช้งาน
