Add passkeys and bump spring

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -65,6 +65,7 @@ web.api.error=Error
 web.api.back=Back to main page
 web.auth.error.back=Back
 web.auth.header=Login with your Plex.tv account
+web.auth.passkey=Login with Passkey
 web.auth.logged-out=You have been logged out.
 web.auth.login-error=Login error
 web.auth.login-success=Login success
@@ -136,6 +137,7 @@ mail.media.available.body.actions.requirement.add=Add to my watchlist
 discord.media.available.body.external.links=External links
 mail.media.available.body.external.links=External links
 web.navbar.admin.library.unmapped=Unmapped medias
+web.navbar.passkey=Passkeys
 requirement.add.unavailable=Media is not available anymore, please request it again on Overseerr
 web.navbar.media-add=Other media
 locale.unknown=Unknown
