--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -65,6 +65,7 @@ web.api.error=Erreur
 web.api.back=Retour à la page principale
 web.auth.error.back=Retour
 web.auth.header=Connectez-vous avec votre compte Plex.tv
+web.auth.passkey=Connectez-vous avec une Passkey
 web.auth.logged-out=Vous avez été déconnecté.
 web.auth.login-error=Erreur connexion
 web.auth.login-success=Connexion réussie
@@ -136,6 +137,7 @@ mail.media.available.body.actions.requirement.add=Ajouter à ma liste de lecture
 discord.media.available.body.external.links=Liens externes
 mail.media.available.body.external.links=Liens externes
 web.navbar.admin.library.unmapped=Médias non-liés
+web.navbar.passkey=Passkeys
 requirement.add.unavailable=Le média n'est plus disponible, merci de le demander à nouveau sur Overseerr
 web.navbar.media-add=Autres médias
 locale.unknown=Inconnu
