--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -65,6 +65,7 @@ web.api.error=เกิดข้อผิดพลาด
 web.api.back=กลับไปที่หน้าหลัก
 web.auth.error.back=กลับ
 web.auth.header=เข้าสู่ระบบด้วยบัญชี Plex.tv ของคุณ
+web.auth.passkey=เข้าสู่ระบบด้วยพาสคีย์
 web.auth.logged-out=คุณได้ออกจากระบบแล้ว
 web.auth.login-error=ข้อผิดพลาดในการเข้าสู่ระบบ
 web.auth.login-success=เข้าสู่ระบบสำเร็จ
@@ -136,6 +137,7 @@ mail.media.available.body.actions.requirement.add=เพิ่มในราย
 discord.media.available.body.external.links=ลิงค์ภายนอก
 mail.media.available.body.external.links=ลิงค์ภายนอก
 web.navbar.admin.library.unmapped=สื่อที่ยังไม่ได้แมป
+web.navbar.passkey=พาสคีย์
 requirement.add.unavailable=สื่อไม่พร้อมใช้งานอีกต่อไป กรุณาขอใหม่ที่ Overseerr
 web.navbar.media-add=สื่ออื่นๆ
 locale.unknown=ไม่ทราบ
