--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -158,3 +158,7 @@ locale.vie=Vietnamese
 locale.kor=Korean
 locale.cho=Chinese
 locale.hin=Hindi
+locale.pol=Polish
+locale.nld=Dutch
+locale.tur=Turkish
+locale.zho=Chinese
