--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -158,3 +158,7 @@ locale.vie=Vietnamien
 locale.kor=Coréen
 locale.cho=Chinois
 locale.hin=Hindi
+locale.pol=Polonais
+locale.nld=Néerlandais
+locale.tur=Turc
+locale.zho=Chinois
