--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -158,3 +158,7 @@ locale.vie=เวียดนาม
 locale.kor=เกาหลี
 locale.cho=จีน
 locale.hin=ฮินดี
+locale.pol=ภาษาโปแลนด์
+locale.nld=ภาษาดัตช์
+locale.tur=ภาษาตุรกี
+locale.zho=ภาษาจีน
