Setting media downloaded manually

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -98,7 +98,8 @@ web.navbar.admin.requirement.list=All requirements
 web.navbar.logout=Logout
 web.navbar.media-list=Watchlist
 mail.watchlist.body.header.downloading=Media downloading:
-mail.watchlist.body.header.pending=Media waiting to be downloaded:
+mail.watchlist.body.header.pending=Medias waiting to be downloaded:
+web.media-list.table.action.downloaded=Set downloaded
 tvdb.genre.adventure=Adventure
 tvdb.genre.animation=Animation
 tvdb.genre.comedy=Comedy
