--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -99,6 +99,7 @@ web.navbar.logout=Déconnexion
 web.navbar.media-list=Liste de lecture
 mail.watchlist.body.header.downloading=Médias en téléchargement :
 mail.watchlist.body.header.pending=Médias en attente de téléchargement :
+web.media-list.table.action.downloaded=Marquer téléchargé
 tvdb.genre.adventure=Aventure
 tvdb.genre.animation=Animation
 tvdb.genre.comedy=Comédie
