--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -99,6 +99,7 @@ web.navbar.logout=ออกจากระบบ
 web.navbar.media-list=รายการที่คุณต้องการ
 mail.watchlist.body.header.downloading=สื่อที่กำลังดาวน์โหลด:
 mail.watchlist.body.header.pending=สื่อที่รอการดาวน์โหลด:
+web.media-list.table.action.downloaded=ตั้งค่าที่ดาวน์โหลด
 tvdb.genre.adventure=ผจญภัย
 tvdb.genre.animation=แอนิเมชัน
 tvdb.genre.comedy=ตลก
