Add TMDB genre translation

--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -127,6 +127,7 @@ tmdb.genre.10752=Guerre
 tmdb.genre.36=Histoire
 tmdb.genre.10749=Romance
 tmdb.genre.10762=Enfants
+tmdb.genre.10770=Téléfilm
 web.theme.auto=Auto
 web.theme.dark=Sombre
 web.theme.light=Clair
