--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -127,6 +127,7 @@ tmdb.genre.10752=สงคราม
 tmdb.genre.36=ประวัติศาสตร์
 tmdb.genre.10749=โรแมนติก
 tmdb.genre.10762=เด็ก
+tmdb.genre.10770=ภาพยนตร์โทรทัศน์
 web.theme.auto=อัตโนมัติ
 web.theme.dark=มืด
 web.theme.light=สว่าง
