--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -127,6 +127,7 @@ tmdb.genre.10752=War
 tmdb.genre.36=History
 tmdb.genre.10749=Romance
 tmdb.genre.10762=Kids
+tmdb.genre.10770=TV Movie
 web.theme.auto=Auto
 web.theme.dark=Dark
 web.theme.light=Light
