Add locale translations

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -165,3 +165,18 @@ locale.nld=Dutch
 locale.tur=Turkish
 locale.zho=Chinese
 locale.enm=English (Weeb)
+locale.cat=Catalan
+locale.ces=Czech
+locale.dan=Danish
+locale.ell=Greek
+locale.eus=Basque
+locale.fin=Finnish
+locale.fil=Filipino
+locale.glg=Galician
+locale.heb=Hebrew
+locale.hrv=Croatian
+locale.hun=Hungarian
+locale.nob=Norwegian Bokmål
+locale.ron=Romanian
+locale.swe=Swedish
+locale.ukr=Ukrainian
