--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -165,3 +165,18 @@ locale.nld=Néerlandais
 locale.tur=Turc
 locale.zho=Chinois
 locale.enm=Anglais (Weeb)
+locale.cat=Catalan
+locale.ces=Tchèque
+locale.dan=Danois
+locale.ell=Grec
+locale.eus=Basque
+locale.fin=Finnois
+locale.fil=Filipino
+locale.glg=Galicien
+locale.heb=Hébreu
+locale.hrv=Croate
+locale.hun=Hongrois
+locale.nob=Norvégien Bokmål
+locale.ron=Roumain
+locale.swe=Suédois
+locale.ukr=Ukrainien
