--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -165,3 +165,18 @@ locale.nld=ภาษาดัตช์
 locale.tur=ภาษาตุรกี
 locale.zho=ภาษาจีน
 locale.enm=ภาษาอังกฤษ (สายอนิเมะ)
+locale.cat=กาตาลา
+locale.ces=เช็ก
+locale.dan=เดนมาร์ก
+locale.ell=กรีก
+locale.eus=บาสก์
+locale.fin=ฟินแลนด์
+locale.fil=ฟิลิปปินส์
+locale.glg=กาลิเซีย
+locale.heb=ฮีบรู
+locale.hrv=โครเอเชีย
+locale.hun=ฮังการี
+locale.nob=นอร์เวย์บุคมอล
+locale.ron=โรมาเนีย
+locale.swe=สวีเดน
+locale.ukr=ยูเครน
