--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -12,6 +12,7 @@ discord.media.available.body.bitrates=Bitrates
 discord.media.available.body.summary=Summary
 discord.media.available.subject=Plex: Media from your watchlist available
 discord.media.deleted.subject=Plex: Media from your watchlist deleted
+discord.media.watched.subject=Plex: Media from your watchlist watched
 discord.requirement.added.subject=Plex: New media added to watchlist
 discord.requirement.manually-abandoned.subject=Plex: Media from your watchlist manually marked as abandoned
 discord.requirement.manually-watched.subject=Plex: Media from your watchlist manually marked as watched
@@ -33,6 +34,7 @@ mail.media.available.body.resolutions=Resolutions
 mail.media.available.body.bitrates=Bitrates
 mail.media.available.subject=Plex: Media from your watchlist available
 mail.media.deleted.subject=Plex: Media from your watchlist deleted
+mail.media.watched.subject=Plex: Media from your watchlist watched
 mail.requirement.added.subject=Plex: New media added to watchlist
 mail.requirement.manually-abandoned.subject=Plex: Media from your watchlist manually marked as abandoned
 mail.requirement.manually-watched.subject=Plex: Media from your watchlist manually marked as watched
