--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -12,6 +12,7 @@ discord.media.available.body.bitrates=Débits
 discord.media.available.body.summary=Résumé
 discord.media.available.subject=Plex : Média de la liste de lecture disponible
 discord.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
+discord.media.watched.subject=Plex : Média de votre liste de lecture regardé
 discord.requirement.added.subject=Plex : Nouveau média ajouté à la liste de lecture
 discord.requirement.manually-abandoned.subject=Plex : Média de votre liste de lecture manuellement marqué comme abandonné
 discord.requirement.manually-watched.subject=Plex : Média de votre liste de lecture manuellement marqué comme regardé
@@ -33,6 +34,7 @@ mail.media.available.body.resolutions=Résolutions
 mail.media.available.body.bitrates=Débits
 mail.media.available.subject=Plex : Média de la liste de lecture disponible
 mail.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
+mail.media.watched.subject=Plex : Média de votre liste de lecture regardé
 mail.requirement.added.subject=Plex : Nouveau média ajouté à la liste de lecture
 mail.requirement.manually-abandoned.subject=Plex : Média de votre liste de lecture manuellement marqué comme abandonné
 mail.requirement.manually-watched.subject=Plex : Média de votre liste de lecture manuellement marqué comme regardé
