--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -12,6 +12,7 @@ discord.media.available.body.bitrates=อัตราบิต
 discord.media.available.body.summary=สรุป
 discord.media.available.subject=Plex: สื่อจากรายการที่คุณดูพร้อมใช้งาน
 discord.media.deleted.subject=Plex: สื่อจากรายการที่คุณดูถูกลบแล้ว
+discord.media.watched.subject=Plex: มีการรับชมเนื้อหาจากรายการรับชมของคุณแล้ว
 discord.requirement.added.subject=Plex: เพิ่มสื่อใหม่ในรายการที่ต้องการ
 discord.requirement.manually-abandoned.subject=Plex: สื่อจากรายการที่ต้องการถูกทำเครื่องหมายเป็นยกเลิกด้วยตนเอง
 discord.requirement.manually-watched.subject=Plex: สื่อจากรายการที่ต้องการถูกทำเครื่องหมายเป็นดูแล้วด้วยตนเอง
@@ -33,6 +34,7 @@ mail.media.available.body.resolutions=ความละเอียด
 mail.media.available.body.bitrates=อัตราบิต
 mail.media.available.subject=Plex: สื่อจากรายการที่คุณดูพร้อมใช้งาน
 mail.media.deleted.subject=Plex: สื่อจากรายการที่คุณดูถูกลบแล้ว
+mail.media.watched.subject=Plex: มีการรับชมเนื้อหาจากรายการรับชมของคุณแล้ว
 mail.requirement.added.subject=Plex: เพิ่มสื่อใหม่ในรายการที่ต้องการ
 mail.requirement.manually-abandoned.subject=Plex: สื่อจากรายการที่ต้องการถูกทำเครื่องหมายเป็นยกเลิกด้วยตนเอง
 mail.requirement.manually-watched.subject=Plex: สื่อจากรายการที่ต้องการถูกทำเครื่องหมายเป็นดูแล้วด้วยตนเอง
