Detailed mail title

--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -24,6 +24,7 @@ discord.watchlist.subject=Plex : Votre liste de lecture
 mail.media.added.body.episode=Episode {0}
 mail.media.added.body.season=Saison {0}
 mail.media.added.subject=Plex : Nouveau média ajouté
+mail.media.added.title=Nouveau média ajouté
 mail.media.available.body.actors=Acteurs
 mail.media.available.body.audios=Langues audio
 mail.media.available.body.genres=Genres
@@ -33,11 +34,17 @@ mail.media.available.body.subtitles=Sous-titres
 mail.media.available.body.resolutions=Résolutions
 mail.media.available.body.bitrates=Débits
 mail.media.available.subject=Plex : Média de la liste de lecture disponible
+mail.media.available.title=Média de la liste de lecture disponible
 mail.media.deleted.subject=Plex : Média de votre liste de lecture supprimé
+mail.media.deleted.title=Média de votre liste de lecture supprimé
 mail.media.watched.subject=Plex : Média de votre liste de lecture regardé
+mail.media.watched.title=Média de votre liste de lecture regardé
 mail.requirement.added.subject=Plex : Nouveau média ajouté à la liste de lecture
+mail.requirement.added.title=Nouveau média ajouté à la liste de lecture
 mail.requirement.manually-abandoned.subject=Plex : Média de votre liste de lecture manuellement marqué comme abandonné
+mail.requirement.manually-abandoned.title=Média de votre liste de lecture manuellement marqué comme abandonné
 mail.requirement.manually-watched.subject=Plex : Média de votre liste de lecture manuellement marqué comme regardé
+mail.requirement.manually-watched.title=Média de votre liste de lecture manuellement marqué comme regardé
 mail.watchlist.body.header.available=Médias disponibles en attente de visionnage :
 mail.watchlist.body.media.movie=Film : {0}
 mail.watchlist.body.media.series.episodes=En attente des épisodes {0}
