--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -24,6 +24,7 @@ discord.watchlist.subject=Plex: รายการที่คุณต้อง
 mail.media.added.body.episode=ตอนที่ {0}
 mail.media.added.body.season=ฤดูกาล {0}
 mail.media.added.subject=Plex: เพิ่มสื่อใหม่
+mail.media.added.title=เพิ่มสื่อใหม่
 mail.media.available.body.actors=นักแสดง
 mail.media.available.body.audios=ภาษาเสียง
 mail.media.available.body.genres=ประเภท
@@ -33,11 +34,17 @@ mail.media.available.body.subtitles=คำบรรยาย
 mail.media.available.body.resolutions=ความละเอียด
 mail.media.available.body.bitrates=อัตราบิต
 mail.media.available.subject=Plex: สื่อจากรายการที่คุณดูพร้อมใช้งาน
+mail.media.available.title=สื่อจากรายการที่คุณดูพร้อมใช้งาน
 mail.media.deleted.subject=Plex: สื่อจากรายการที่คุณดูถูกลบแล้ว
+mail.media.deleted.title=สื่อจากรายการที่คุณดูถูกลบแล้ว
 mail.media.watched.subject=Plex: มีการรับชมเนื้อหาจากรายการรับชมของคุณแล้ว
+mail.media.watched.title=มีการรับชมเนื้อหาจากรายการรับชมของคุณแล้ว
 mail.requirement.added.subject=Plex: เพิ่มสื่อใหม่ในรายการที่ต้องการ
+mail.requirement.added.title=เพิ่มสื่อใหม่ในรายการที่ต้องการ
 mail.requirement.manually-abandoned.subject=Plex: สื่อจากรายการที่ต้องการถูกทำเครื่องหมายเป็นยกเลิกด้วยตนเอง
+mail.requirement.manually-abandoned.title=สื่อจากรายการที่ต้องการถูกทำเครื่องหมายเป็นยกเลิกด้วยตนเอง
 mail.requirement.manually-watched.subject=Plex: สื่อจากรายการที่ต้องการถูกทำเครื่องหมายเป็นดูแล้วด้วยตนเอง
+mail.requirement.manually-watched.title=สื่อจากรายการที่ต้องการถูกทำเครื่องหมายเป็นดูแล้วด้วยตนเอง
 mail.watchlist.body.header.available=สื่อที่ดาวน์โหลดเสร็จแล้วและรอการชม:
 mail.watchlist.body.media.movie=ภาพยนตร์: {0}
 mail.watchlist.body.media.series.episodes=รอการดาวน์โหลดตอนที่ {0}
