--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -24,6 +24,7 @@ discord.watchlist.subject=Plex: Your watchlist
 mail.media.added.body.episode=Episode {0}
 mail.media.added.body.season=Season {0}
 mail.media.added.subject=Plex: New media added
+mail.media.added.title=New media added
 mail.media.available.body.actors=Actors
 mail.media.available.body.audios=Audio languages
 mail.media.available.body.genres=Genres
@@ -33,11 +34,17 @@ mail.media.available.body.subtitles=Subtitles
 mail.media.available.body.resolutions=Resolutions
 mail.media.available.body.bitrates=Bitrates
 mail.media.available.subject=Plex: Media from your watchlist available
+mail.media.available.title=Media from your watchlist available
 mail.media.deleted.subject=Plex: Media from your watchlist deleted
+mail.media.deleted.title=Media from your watchlist deleted
 mail.media.watched.subject=Plex: Media from your watchlist watched
+mail.media.watched.title=Media from your watchlist watched
 mail.requirement.added.subject=Plex: New media added to watchlist
+mail.requirement.added.title=New media added to watchlist
 mail.requirement.manually-abandoned.subject=Plex: Media from your watchlist manually marked as abandoned
+mail.requirement.manually-abandoned.title=Media from your watchlist manually marked as abandoned
 mail.requirement.manually-watched.subject=Plex: Media from your watchlist manually marked as watched
+mail.requirement.manually-watched.title=Media from your watchlist manually marked as watched
 mail.watchlist.body.header.available=Media fully downloaded and waiting to be watched:
 mail.watchlist.body.media.movie=Movie: {0}
 mail.watchlist.body.media.series.episodes=Waiting for episodes {0}
