--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -189,3 +189,7 @@ locale.nob=Norwegian Bokmål
 locale.ron=Romanian
 locale.swe=Swedish
 locale.ukr=Ukrainian
+locale.kan=Kannada
+locale.mal=Malayalam
+locale.tam=Tamil
+locale.tel=Telugu
