--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -189,3 +189,7 @@ locale.nob=Norvégien Bokmål
 locale.ron=Roumain
 locale.swe=Suédois
 locale.ukr=Ukrainien
+locale.kan=Kannada
+locale.mal=Malayalam
+locale.tam=Tamoul
+locale.tel=Télougou
