--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -189,3 +189,7 @@ locale.nob=นอร์เวย์บุคมอล
 locale.ron=โรมาเนีย
 locale.swe=สวีเดน
 locale.ukr=ยูเครน
+locale.kan=ภาษากันนาดา
+locale.mal=ภาษามาลายาลัม
+locale.tam=ภาษาทมิฬ
+locale.tel=ภาษาเตลูกู
