Display server tags + remove episode type

--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -31,6 +31,7 @@ mail.media.available.body.genres=Genres
 mail.media.available.body.length=Length
 mail.media.available.body.release-date=Release date
 mail.media.available.body.subtitles=Subtitles
+mail.media.available.body.server-tags=Server tags
 mail.media.available.body.resolutions=Resolutions
 mail.media.available.body.bitrates=Bitrates
 mail.media.available.subject=Plex: Media from your watchlist available
