--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -31,6 +31,7 @@ mail.media.available.body.genres=ประเภท
 mail.media.available.body.length=ความยาว
 mail.media.available.body.release-date=วันออก
 mail.media.available.body.subtitles=คำบรรยาย
+mail.media.available.body.server-tags=แท็กเซิร์ฟเวอร์
 mail.media.available.body.resolutions=ความละเอียด
 mail.media.available.body.bitrates=อัตราบิต
 mail.media.available.subject=Plex: สื่อจากรายการที่คุณดูพร้อมใช้งาน
