--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -31,6 +31,7 @@ mail.media.available.body.genres=Genres
 mail.media.available.body.length=Durée
 mail.media.available.body.release-date=Date de sortie
 mail.media.available.body.subtitles=Sous-titres
+mail.media.available.body.server-tags=Étiquettes du serveur
 mail.media.available.body.resolutions=Résolutions
 mail.media.available.body.bitrates=Débits
 mail.media.available.subject=Plex : Média de la liste de lecture disponible
