--- a/src/main/resources/lang/messages.properties
+++ b/src/main/resources/lang/messages.properties
@@ -194,3 +194,10 @@ locale.kan=Kannada
 locale.mal=Malayalam
 locale.tam=Tamil
 locale.tel=Telugu
+locale.srp=Serbian
+locale.guj=Gujarati
+locale.mar=Marathi
+locale.ben=Bengali
+locale.pan=Punjabi
+locale.urd=Urdu
+locale.nep=Nepali
