Add new locale entries for various languages
Signed-off-by: Thomas <1688389+Rakambda@users.noreply.github.com>

--- a/src/main/resources/lang/messages_fr.properties
+++ b/src/main/resources/lang/messages_fr.properties
@@ -194,3 +194,10 @@ locale.kan=Kannada
 locale.mal=Malayalam
 locale.tam=Tamoul
 locale.tel=Télougou
+locale.srp=Serbe
+locale.guj=Gujarati
+locale.mar=Marathi
+locale.ben=Bengali
+locale.pan=Pendjabi
+locale.urd=Ourdou
+locale.nep=Népalais
