Add new locale entries for various languages
Signed-off-by: Thomas <1688389+Rakambda@users.noreply.github.com>

--- a/src/main/resources/lang/messages_th.properties
+++ b/src/main/resources/lang/messages_th.properties
@@ -194,3 +194,10 @@ locale.kan=ภาษากันนาดา
 locale.mal=ภาษามาลายาลัม
 locale.tam=ภาษาทมิฬ
 locale.tel=ภาษาเตลูกู
+locale.srp=ภาษาเซอร์เบีย
+locale.guj=ภาษาคุชราต
+locale.mar=ภาษามราฐี
+locale.ben=ภาษาเบงกาลี
+locale.pan=ภาษาปัญจาบ
+locale.urd=ภาษาอูรดู
+locale.nep=ภาษานีปาล
